k8s/deployments/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: search_engine
    component: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search_engine
      component: ui
  template:
    metadata:
      name: ui-pod
      labels:
        app: search_engine
        component: ui
    spec:
      containers:
      - image: podstolniy/ui:latest
        name: ui
