k8s/deployments/rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: search_engine
    component: rabbitmq
spec:
  ports:
  - name: http
    protocol: TCP
    port: 15672
  - name: amqp
    protocol: TCP
    port: 5672
  selector:
    app: search_engine
    component: rabbitmq
